# mycli

./: .gitignore  README.txt  __main__.py  pyproject.toml
console/: application.py
console/commands/: about.py  command.py
lib/: cleo
src/mycli/: __main__.py
src/mycli/console/: application.py  exceptions.py
src/mycli/console/commands/: about.py  cleo.py  command.py  source.py
test/: main.py
