[tool.poetry]
name = "mycli"
version = "0.1.0"
description = "This package is an exemple of how implement a CLI in python with cleo package"
authors = ["ValentinColin"]

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
